--- a/photo_gallery_v5/index.html
+++ b/photo_gallery_v5/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Interactive Photo Gallery</title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/baguetteBox.min.css">​
     </head>
     <body>
             
@@ -64,6 +65,13 @@
 
            </div>
 
-        <script src="./photo-search.js"></script>
+        <script src="js/photo-search.js"></script>
+        <script src="js/baguetteBox.min.js"></script>​
+        <script src="js/app.js"></script>
+        <script>
+            window.addEventListener('load', function() {
+              baguetteBox.run('.gallery');
+            });
+            </script>
     </body>
 </html>
