search and grid alignment

--- a/photo_gallery_v5/index.html
+++ b/photo_gallery_v5/index.html
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="css/baguetteBox.min.css">​
     </head>
     <body>
-            
+            <nav>
                 <input id="searchbar" onkeyup="search_photo()" type="text"
                 name="search" placeholder="Search">
+            </nav>
             
 
             <div class="gallery">
